creating fasttext model

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "25afcd63-5e45-4efb-84f8-f49cad9325f5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1640fbc5-8c1a-4d70-8a05-f10f8d1a75f5",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b43c24e0-e602-4d35-aae6-1b877a71300c",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "4  मणिपुर के मुख्यमंत्री एन बीरेन सिंह के आश्वासन...    Hindi"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,17 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bc0ebf38-8c7e-4125-a151-57d340c98c2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8325566, 2)"
+       "(7935983, 2)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d6ed5723-3875-49ed-a1a2-51b6e84ecdd1",
    "metadata": {},
    "outputs": [
@@ -130,27 +130,21 @@
      "data": {
       "text/plain": [
        "English      7698142\n",
-       "Bodo          257187\n",
        "Bengali        82980\n",
-       "Urdu           50000\n",
        "Telugu         47415\n",
-       "Sanskrit       34293\n",
-       "Marathi        33159\n",
        "Gujarati       28363\n",
        "Assamese       24357\n",
        "Tamil          20083\n",
-       "Hindi          13254\n",
+       "Hindi          14462\n",
        "Odia           10052\n",
-       "Nepali          9996\n",
        "Malayalam       9132\n",
-       "Sindhi          6156\n",
        "Punjabi          784\n",
        "Kannada          203\n",
        "Kashmiri          10\n",
        "Name: language, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "8e6551d9-e848-488b-835f-2c0d3eb53f3f",
    "metadata": {},
    "outputs": [
@@ -173,7 +167,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "718a51ea-cff7-4641-a904-eae3b0f6ad84",
    "metadata": {},
    "outputs": [],
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "cded3e24-18a5-4f42-bdc7-3cca68925d2a",
    "metadata": {},
    "outputs": [],
@@ -206,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "1e855e6b-3082-4d92-873d-3da0321e71d2",
    "metadata": {},
    "outputs": [],
@@ -217,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "b57840c6-9d01-430c-b92d-dbb282a02cff",
    "metadata": {},
    "outputs": [],
@@ -227,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "922120f0-67d7-4710-83e0-1cfcd6b045a1",
    "metadata": {},
    "outputs": [],
@@ -237,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "710c0f5b-8d5f-4079-8c2b-710af2b56099",
    "metadata": {},
    "outputs": [],
@@ -247,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "a4671be5-bdf6-4d6a-82eb-e170627836f7",
    "metadata": {},
    "outputs": [],
@@ -257,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "fa6f3504-d47b-4b3a-8333-350d7d9c95e6",
    "metadata": {},
    "outputs": [
@@ -674,7 +668,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,17 +679,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "774211cc-5a5a-44c1-9532-2edba1c039b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9969189466400867"
+       "0.9997842585079472"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,27 +700,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "37b0ef5e-676e-4013-9020-2b1796a80055",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = \"\""
+    "text = 'hey'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "4af8a417-cbee-416b-a325-764050759785",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = cv.transform([user]).toarray()"
+    "data = cv.transform([text]).toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "20d4fffe-b459-4da4-972a-80eb0daa2982",
    "metadata": {},
    "outputs": [],
@@ -736,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "51592e6f-a5c1-4537-8b29-a883d9dfed5f",
    "metadata": {},
    "outputs": [
