--- a/fasttext_dataset_preprocessing.ipynb
+++ b/fasttext_dataset_preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6a00d803-450d-480c-bbc9-e595fcccf712",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ee7d9782-6474-4b69-a8a1-9b377379fc5e",
    "metadata": {},
    "outputs": [
@@ -54,28 +54,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>कांग्रेस नेता बलजिंदर सिंह की सोमवार को पंजाब ...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>which corresponds to a distance of Mly or Mpc</td>\n",
+       "      <td>English</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>केंद्रीय मंत्री प्रह्लाद पटेल ने लोकसभा और विध...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>webhost is a free web hosting service operated...</td>\n",
+       "      <td>English</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>आरबीआई के अधिकारियों ने एक लेख में लिखा है कि ...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>x is a Dutch born audiovisual artist currently...</td>\n",
+       "      <td>English</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>नामक्कल तमिलनाडु में शावरमा खाने से सोमवार को ...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>is an alcohol abuse prevention program develop...</td>\n",
+       "      <td>English</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>मणिपुर के मुख्यमंत्री एन बीरेन सिंह के आश्वासन...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>is the debut studio album of H llb nt released...</td>\n",
+       "      <td>English</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -83,14 +83,14 @@
       ],
       "text/plain": [
        "                                                text language\n",
-       "0  कांग्रेस नेता बलजिंदर सिंह की सोमवार को पंजाब ...    Hindi\n",
-       "1  केंद्रीय मंत्री प्रह्लाद पटेल ने लोकसभा और विध...    Hindi\n",
-       "2  आरबीआई के अधिकारियों ने एक लेख में लिखा है कि ...    Hindi\n",
-       "3  नामक्कल तमिलनाडु में शावरमा खाने से सोमवार को ...    Hindi\n",
-       "4  मणिपुर के मुख्यमंत्री एन बीरेन सिंह के आश्वासन...    Hindi"
+       "0      which corresponds to a distance of Mly or Mpc  English\n",
+       "1  webhost is a free web hosting service operated...  English\n",
+       "2  x is a Dutch born audiovisual artist currently...  English\n",
+       "3  is an alcohol abuse prevention program develop...  English\n",
+       "4  is the debut studio album of H llb nt released...  English"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0dc6796b-560a-4b35-ba0a-1b4d5241e684",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1dc89d02-26cb-4e62-a31f-ef7a83d14208",
    "metadata": {},
    "outputs": [
@@ -124,21 +124,10 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting fasttext\n",
-      "  Downloading fasttext-0.9.2.tar.gz (68 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m68.8/68.8 KB\u001b[0m \u001b[31m2.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: numpy in /home/pranav/.local/lib/python3.10/site-packages (from fasttext) (1.26.4)\n",
-      "Collecting pybind11>=2.2\n",
-      "  Using cached pybind11-2.12.0-py3-none-any.whl (234 kB)\n",
-      "Requirement already satisfied: setuptools>=0.7.0 in /usr/lib/python3/dist-packages (from fasttext) (59.6.0)\n",
-      "Building wheels for collected packages: fasttext\n",
-      "  Building wheel for fasttext (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for fasttext: filename=fasttext-0.9.2-cp310-cp310-linux_x86_64.whl size=4227229 sha256=9eda3b9848478b3c4121aa87f0bd069322a50c59eb7cd7f3871fa2b33b67b1f2\n",
-      "  Stored in directory: /home/pranav/.cache/pip/wheels/a5/13/75/f811c84a8ab36eedbaef977a6a58a98990e8e0f1967f98f394\n",
-      "Successfully built fasttext\n",
-      "Installing collected packages: pybind11, fasttext\n",
-      "Successfully installed fasttext-0.9.2 pybind11-2.12.0\n"
+      "Requirement already satisfied: fasttext in /home/online/.local/lib/python3.8/site-packages (0.9.2)\n",
+      "Requirement already satisfied: numpy in /home/online/.local/lib/python3.8/site-packages (from fasttext) (1.24.4)\n",
+      "Requirement already satisfied: pybind11>=2.2 in /home/online/.local/lib/python3.8/site-packages (from fasttext) (2.12.0)\n",
+      "Requirement already satisfied: setuptools>=0.7.0 in /usr/lib/python3/dist-packages (from fasttext) (59.6.0)\n"
      ]
     }
    ],
@@ -148,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "64a9c04a-90c6-4e17-85e6-4148a20c4b4e",
    "metadata": {},
    "outputs": [],
@@ -158,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "28f419cc-a8a2-41eb-b3bc-11572b6d9e2f",
    "metadata": {},
    "outputs": [],
@@ -168,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "5e8132e4-620d-4faa-a166-85ebe5b15181",
    "metadata": {},
    "outputs": [],
@@ -178,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eb5f02bb-a9fe-49ec-bdac-5c399dd07392",
    "metadata": {},
    "outputs": [
@@ -189,7 +178,7 @@
       "Read 208M words\n",
       "Number of words:  4626144\n",
       "Number of labels: 12\n",
-      "Progress:  70.2% words/sec/thread:  284668 lr:  0.267756 avg.loss:  0.000033 ETA:   0h32m59s  9.0% words/sec/thread:  414907 lr:  0.819334 avg.loss:  0.000141 ETA:   1h 9m16s40ss 36.8% words/sec/thread:  350647 lr:  0.569193 avg.loss:  0.000054 ETA:   0h56m56s 39.2% words/sec/thread:  337303 lr:  0.547220 avg.loss:  0.000050 ETA:   0h56m54s 41.7% words/sec/thread:  324937 lr:  0.524845 avg.loss:  0.000047 ETA:   0h56m39s 42.1% words/sec/thread:  323448 lr:  0.520761 avg.loss:  0.000046 ETA:   0h56m28s 48.2% words/sec/thread:  308803 lr:  0.466271 avg.loss:  0.000044 ETA:   0h52m58s 48.4% words/sec/thread:  307730 lr:  0.464190 avg.loss:  0.000044 ETA:   0h52m54s 50.7% words/sec/thread:  300990 lr:  0.444079 avg.loss:  0.000041 ETA:   0h51m45s 0.000038 ETA:   0h45m 0s"
+      "Progress: 100.0% words/sec/thread:  366657 lr:  0.000000 avg.loss:  0.000032 ETA:   0h 0m 0s 16.8% words/sec/thread:  447568 lr:  0.749201 avg.loss:  0.000104 ETA:   1h32m16s 24.2% words/sec/thread:  397542 lr:  0.682070 avg.loss:  0.000082 ETA:   1h34m34s 53.0% words/sec/thread:  353142 lr:  0.422921 avg.loss:  0.000048 ETA:   1h 6m 0s 57.9% words/sec/thread:  354348 lr:  0.379071 avg.loss:  0.000046 ETA:   0h58m58s 70.4% words/sec/thread:  352893 lr:  0.266057 avg.loss:  0.000040 ETA:   0h41m33s 70.8% words/sec/thread:  353737 lr:  0.263201 avg.loss:  0.000040 ETA:   0h41m 0s 75.9% words/sec/thread:  353638 lr:  0.216974 avg.loss:  0.000037 ETA:   0h33m49s 0.210120 avg.loss:  0.000038 ETA:   0h32m41s 94.7% words/sec/thread:  363208 lr:  0.048130 avg.loss:  0.000033 ETA:   0h 7m18s\n"
      ]
     }
    ],
@@ -199,18 +188,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "831b747a-31bb-415b-8dcf-6f963170c7ee",
+   "execution_count": 6,
+   "id": "6fa5d359-826c-46a8-90eb-20d4c35ef33b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_model(model_save_path)"
+    "model.save_model(\"fasttext_finetuned.bin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ff7c2769-6e95-4ea3-8ad8-618c1034926b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "loaded_model = fasttext.load_model(\"fasttext_finetuned.bin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0925cffb-dd69-4e9f-b352-ca9985bb5251",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('__label__Hindi',), array([0.99999559]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"Inheritance Tax: जब अरुण जेटली ने लगाया था कुछ इसी तरह का टैक्‍स, भारी व‍िरोध के बाद मोदी सरकार को लेना पड़ा था वापस\"\n",
+    "loaded_model.predict(text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa5d359-826c-46a8-90eb-20d4c35ef33b",
+   "id": "78a36d83-2be9-4dc7-83e2-b80e5bac1077",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
