--- a/fasttext_dataset_preprocessing.ipynb
+++ b/fasttext_dataset_preprocessing.ipynb
@@ -54,28 +54,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>which corresponds to a distance of Mly or Mpc</td>\n",
-       "      <td>English</td>\n",
+       "      <td>कांग्रेस नेता बलजिंदर सिंह की सोमवार को पंजाब ...</td>\n",
+       "      <td>Hindi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>webhost is a free web hosting service operated...</td>\n",
-       "      <td>English</td>\n",
+       "      <td>केंद्रीय मंत्री प्रह्लाद पटेल ने लोकसभा और विध...</td>\n",
+       "      <td>Hindi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>x is a Dutch born audiovisual artist currently...</td>\n",
-       "      <td>English</td>\n",
+       "      <td>आरबीआई के अधिकारियों ने एक लेख में लिखा है कि ...</td>\n",
+       "      <td>Hindi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>is an alcohol abuse prevention program develop...</td>\n",
-       "      <td>English</td>\n",
+       "      <td>नामक्कल तमिलनाडु में शावरमा खाने से सोमवार को ...</td>\n",
+       "      <td>Hindi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>is the debut studio album of H llb nt released...</td>\n",
-       "      <td>English</td>\n",
+       "      <td>मणिपुर के मुख्यमंत्री एन बीरेन सिंह के आश्वासन...</td>\n",
+       "      <td>Hindi</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -83,11 +83,11 @@
       ],
       "text/plain": [
        "                                                text language\n",
-       "0      which corresponds to a distance of Mly or Mpc  English\n",
-       "1  webhost is a free web hosting service operated...  English\n",
-       "2  x is a Dutch born audiovisual artist currently...  English\n",
-       "3  is an alcohol abuse prevention program develop...  English\n",
-       "4  is the debut studio album of H llb nt released...  English"
+       "0  कांग्रेस नेता बलजिंदर सिंह की सोमवार को पंजाब ...    Hindi\n",
+       "1  केंद्रीय मंत्री प्रह्लाद पटेल ने लोकसभा और विध...    Hindi\n",
+       "2  आरबीआई के अधिकारियों ने एक लेख में लिखा है कि ...    Hindi\n",
+       "3  नामक्कल तमिलनाडु में शावरमा खाने से सोमवार को ...    Hindi\n",
+       "4  मणिपुर के मुख्यमंत्री एन बीरेन सिंह के आश्वासन...    Hindi"
       ]
      },
      "execution_count": 3,
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('fasttext_dataset', 'w', encoding='utf-8') as f:\n",
+    "with open('fasttext_dataset.txt', 'w', encoding='utf-8') as f:\n",
     "    for index, row in data.iterrows():\n",
     "        text = row['text']\n",
     "        language = row['language']\n",
@@ -124,10 +124,10 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: fasttext in /home/online/.local/lib/python3.8/site-packages (0.9.2)\n",
-      "Requirement already satisfied: numpy in /home/online/.local/lib/python3.8/site-packages (from fasttext) (1.24.4)\n",
-      "Requirement already satisfied: pybind11>=2.2 in /home/online/.local/lib/python3.8/site-packages (from fasttext) (2.12.0)\n",
-      "Requirement already satisfied: setuptools>=0.7.0 in /usr/lib/python3/dist-packages (from fasttext) (59.6.0)\n"
+      "Requirement already satisfied: fasttext in /home/pranav/.local/lib/python3.10/site-packages (0.9.2)\n",
+      "Requirement already satisfied: numpy in /home/pranav/.local/lib/python3.10/site-packages (from fasttext) (1.26.4)\n",
+      "Requirement already satisfied: setuptools>=0.7.0 in /usr/lib/python3/dist-packages (from fasttext) (59.6.0)\n",
+      "Requirement already satisfied: pybind11>=2.2 in /home/pranav/.local/lib/python3.10/site-packages (from fasttext) (2.12.0)\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "64a9c04a-90c6-4e17-85e6-4148a20c4b4e",
    "metadata": {},
    "outputs": [],
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "28f419cc-a8a2-41eb-b3bc-11572b6d9e2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data_path = 'fasttext_dataset'"
+    "training_data_path = 'fasttext_dataset.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "5e8132e4-620d-4faa-a166-85ebe5b15181",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "eb5f02bb-a9fe-49ec-bdac-5c399dd07392",
    "metadata": {},
    "outputs": [
@@ -178,17 +178,17 @@
       "Read 208M words\n",
       "Number of words:  4626144\n",
       "Number of labels: 12\n",
-      "Progress: 100.0% words/sec/thread:  366657 lr:  0.000000 avg.loss:  0.000032 ETA:   0h 0m 0s 16.8% words/sec/thread:  447568 lr:  0.749201 avg.loss:  0.000104 ETA:   1h32m16s 24.2% words/sec/thread:  397542 lr:  0.682070 avg.loss:  0.000082 ETA:   1h34m34s 53.0% words/sec/thread:  353142 lr:  0.422921 avg.loss:  0.000048 ETA:   1h 6m 0s 57.9% words/sec/thread:  354348 lr:  0.379071 avg.loss:  0.000046 ETA:   0h58m58s 70.4% words/sec/thread:  352893 lr:  0.266057 avg.loss:  0.000040 ETA:   0h41m33s 70.8% words/sec/thread:  353737 lr:  0.263201 avg.loss:  0.000040 ETA:   0h41m 0s 75.9% words/sec/thread:  353638 lr:  0.216974 avg.loss:  0.000037 ETA:   0h33m49s 0.210120 avg.loss:  0.000038 ETA:   0h32m41s 94.7% words/sec/thread:  363208 lr:  0.048130 avg.loss:  0.000033 ETA:   0h 7m18s\n"
+      "Progress:   3.2% words/sec/thread:  709814 lr:  0.967810 avg.loss:  0.000658 ETA:   0h43m 2s"
      ]
     }
    ],
    "source": [
-    "model = fasttext.train_supervised(input=training_data_path, epoch=100, lr=0.9)"
+    "model = fasttext.train_supervised(input=training_data_path, epoch=100, lr=1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6fa5d359-826c-46a8-90eb-20d4c35ef33b",
    "metadata": {},
    "outputs": [],
@@ -198,39 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ff7c2769-6e95-4ea3-8ad8-618c1034926b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loaded_model = fasttext.load_model(\"fasttext_finetuned.bin\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0925cffb-dd69-4e9f-b352-ca9985bb5251",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('__label__Hindi',), array([0.99999559]))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = \"Inheritance Tax: जब अरुण जेटली ने लगाया था कुछ इसी तरह का टैक्‍स, भारी व‍िरोध के बाद मोदी सरकार को लेना पड़ा था वापस\"\n",
     "loaded_model.predict(text)"
@@ -261,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
