--- a/notebooks/fasttext_dataset_preprocessing.ipynb
+++ b/notebooks/fasttext_dataset_preprocessing.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('final_dataset.csv')"
+    "data = pd.read_csv('../Languages.csv')"
    ]
   },
   {
@@ -54,40 +54,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>कांग्रेस नेता बलजिंदर सिंह की सोमवार को पंजाब ...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>কাৰাবন্দীৰ পৰা গৃহবন্দী হৈ উভতিল আং ছান ছু কী</td>\n",
+       "      <td>Assamese</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>केंद्रीय मंत्री प्रह्लाद पटेल ने लोकसभा और विध...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>চীন কোৰিয়া ইণ্ডোনেছিয়াৰ পৰা আমদানি কৰা অপটিক...</td>\n",
+       "      <td>Assamese</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>आरबीआई के अधिकारियों ने एक लेख में लिखा है कि ...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>গ্ৰেপ্তাৰ হল ইমৰান খানদুৰ্নীতিৰ গোচৰত তিনিবছৰৰ...</td>\n",
+       "      <td>Assamese</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>नामक्कल तमिलनाडु में शावरमा खाने से सोमवार को ...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>এইবাৰ পাকিস্তানৰ যুৱকৰ সৈতে বিয়াত বহিল দুই সন...</td>\n",
+       "      <td>Assamese</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>मणिपुर के मुख्यमंत्री एन बीरेन सिंह के आश्वासन...</td>\n",
-       "      <td>Hindi</td>\n",
+       "      <td>নিষেধাজ্ঞা নেওচি ভাৰতলৈ নেপালৰ বিলাহীঘোচ লৈ চা...</td>\n",
+       "      <td>Assamese</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                text language\n",
-       "0  कांग्रेस नेता बलजिंदर सिंह की सोमवार को पंजाब ...    Hindi\n",
-       "1  केंद्रीय मंत्री प्रह्लाद पटेल ने लोकसभा और विध...    Hindi\n",
-       "2  आरबीआई के अधिकारियों ने एक लेख में लिखा है कि ...    Hindi\n",
-       "3  नामक्कल तमिलनाडु में शावरमा खाने से सोमवार को ...    Hindi\n",
-       "4  मणिपुर के मुख्यमंत्री एन बीरेन सिंह के आश्वासन...    Hindi"
+       "                                                text  language\n",
+       "0      কাৰাবন্দীৰ পৰা গৃহবন্দী হৈ উভতিল আং ছান ছু কী  Assamese\n",
+       "1  চীন কোৰিয়া ইণ্ডোনেছিয়াৰ পৰা আমদানি কৰা অপটিক...  Assamese\n",
+       "2  গ্ৰেপ্তাৰ হল ইমৰান খানদুৰ্নীতিৰ গোচৰত তিনিবছৰৰ...  Assamese\n",
+       "3  এইবাৰ পাকিস্তানৰ যুৱকৰ সৈতে বিয়াত বহিল দুই সন...  Assamese\n",
+       "4  নিষেধাজ্ঞা নেওচি ভাৰতলৈ নেপালৰ বিলাহীঘোচ লৈ চা...  Assamese"
       ]
      },
      "execution_count": 3,
@@ -123,16 +123,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: fasttext in /home/pranav/.local/lib/python3.10/site-packages (0.9.2)\n",
-      "Requirement already satisfied: numpy in /home/pranav/.local/lib/python3.10/site-packages (from fasttext) (1.26.4)\n",
-      "Requirement already satisfied: setuptools>=0.7.0 in /usr/lib/python3/dist-packages (from fasttext) (59.6.0)\n",
-      "Requirement already satisfied: pybind11>=2.2 in /home/pranav/.local/lib/python3.10/site-packages (from fasttext) (2.12.0)\n"
+      "Requirement already satisfied: fasttext-wheel in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (0.9.2)\n",
+      "Requirement already satisfied: pybind11>=2.2 in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (from fasttext-wheel) (2.12.0)\n",
+      "Requirement already satisfied: setuptools>=0.7.0 in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (from fasttext-wheel) (69.5.1)\n",
+      "Requirement already satisfied: numpy in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (from fasttext-wheel) (1.26.4)\n"
      ]
     }
    ],
    "source": [
-    "!pip install fasttext"
+    "!pip install fasttext-wheel"
    ]
   },
   {
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "28f419cc-a8a2-41eb-b3bc-11572b6d9e2f",
    "metadata": {},
    "outputs": [],
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "5e8132e4-620d-4faa-a166-85ebe5b15181",
    "metadata": {},
    "outputs": [],
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eb5f02bb-a9fe-49ec-bdac-5c399dd07392",
    "metadata": {},
    "outputs": [
@@ -175,10 +174,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Read 208M words\n",
-      "Number of words:  4626144\n",
-      "Number of labels: 12\n",
-      "Progress:   3.2% words/sec/thread:  709814 lr:  0.967810 avg.loss:  0.000658 ETA:   0h43m 2s"
+      "Read 19M words\n",
+      "Number of words:  1089950\n",
+      "Number of labels: 10\n",
+      "Progress: 100.0% words/sec/thread:  779572 lr: -0.000000 avg.loss:  0.001218 ETA:   0h 0m 0s 779571 lr:  0.000000 avg.loss:  0.001218 ETA:   0h 0m 0s\n"
      ]
     }
    ],
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6fa5d359-826c-46a8-90eb-20d4c35ef33b",
    "metadata": {},
    "outputs": [],
@@ -198,22 +197,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ff7c2769-6e95-4ea3-8ad8-618c1034926b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    }
+   ],
    "source": [
     "loaded_model = fasttext.load_model(\"fasttext_finetuned.bin\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0925cffb-dd69-4e9f-b352-ca9985bb5251",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('__label__Gujarati',), array([1.00001001]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text = \"Inheritance Tax: जब अरुण जेटली ने लगाया था कुछ इसी तरह का टैक्‍स, भारी व‍िरोध के बाद मोदी सरकार को लेना पड़ा था वापस\"\n",
+    "text = \"ગુજરાતી ‍(/ɡʊdʒəˈrɑːti/[૬], રોમન લિપિમાં: Gujarātī, ઉચ્ચાર: [ɡudʒəˈɾɑːtiː]) ભારત દેશના ગુજરાત રાજ્યની ઇન્ડો-આર્યન ભાષા છે અને મુખ્યત્વે ગુજરાતી લોકો દ્વારા બોલાય છે. તે બૃહદ ઇન્ડો-યુરોપિયન ભાષા કુટુંબનો ભાગ છે. ગુજરાતીનો ઉદ્ભવ જૂની ગુજરાતી ભાષા (આશરે ઇ.સ. ૧૧૦૦-૧૫૦૦)માંથી થયો છે. તે ગુજરાત રાજ્ય અને દીવ, દમણ અને દાદરા-નગર હવેલી કેન્દ્રશાસિત પ્રદેશોની અધિકૃત ભાષા છે.\"\n",
     "loaded_model.predict(text)"
    ]
   },
@@ -242,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
