--- a/notebooks/fasttext_dataset_preprocessing.ipynb
+++ b/notebooks/fasttext_dataset_preprocessing.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('fasttext_dataset.txt', 'w', encoding='utf-8') as f:\n",
+    "with open('../fasttext_dataset.txt', 'w', encoding='utf-8') as f:\n",
     "    for index, row in data.iterrows():\n",
     "        text = row['text']\n",
     "        language = row['language']\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1dc89d02-26cb-4e62-a31f-ef7a83d14208",
    "metadata": {},
    "outputs": [
@@ -124,14 +124,32 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: fasttext-wheel in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (0.9.2)\n",
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.5.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (11 kB)\n",
       "Requirement already satisfied: pybind11>=2.2 in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (from fasttext-wheel) (2.12.0)\n",
       "Requirement already satisfied: setuptools>=0.7.0 in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (from fasttext-wheel) (69.5.1)\n",
-      "Requirement already satisfied: numpy in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (from fasttext-wheel) (1.26.4)\n"
+      "Requirement already satisfied: numpy in /mnt/data/language_detection/language_detection_env/lib/python3.12/site-packages (from fasttext-wheel) (1.26.4)\n",
+      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.13.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (60 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.6/60.6 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m31m225.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Downloading joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Downloading threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading scikit_learn-1.5.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.1 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.1/13.1 MB\u001b[0m \u001b[31m439.0 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m301.8/301.8 kB\u001b[0m \u001b[31m272.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[?25hDownloading scipy-1.13.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (38.2 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m38.2/38.2 MB\u001b[0m \u001b[31m401.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:03\u001b[0m\n",
+      "\u001b[?25hDownloading threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "Successfully installed joblib-1.4.2 scikit-learn-1.5.0 scipy-1.13.1 threadpoolctl-3.5.0\n"
      ]
     }
    ],
    "source": [
-    "!pip install fasttext-wheel"
+    "!pip install fasttext-wheel scikit-learn"
    ]
   },
   {
@@ -151,22 +169,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data_path = 'fasttext_dataset.txt'"
+    "training_data_path = '../fasttext_dataset.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "86f60984-9cb0-4edb-be0b-668d72687396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f496a9ec-0465-4731-8506-d0a29cb945e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data['text']\n",
+    "y = data['language']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5c4051f1-9848-4124-9851-e0bf282f9fcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "447b807f-e380-4398-8263-1cf04642e906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.DataFrame({'text': X_train, 'language': y_train})\n",
+    "test = pd.DataFrame({'text': X_test, 'language': y_test})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "974ef830-318e-4bdb-b81f-744b10feebc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../fasttext_train.txt', 'w', encoding='utf-8') as f:\n",
+    "    for index, row in train.iterrows():\n",
+    "        text = row['text']\n",
+    "        language = row['language']\n",
+    "        f.write(f'__label__{language} {text}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eb4376b6-5430-4015-816d-574fe9afa869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../fasttext_test.txt', 'w', encoding='utf-8') as f:\n",
+    "    for index, row in test.iterrows():\n",
+    "        text = row['text']\n",
+    "        language = row['language']\n",
+    "        f.write(f'__label__{language} {text}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "5e8132e4-620d-4faa-a166-85ebe5b15181",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_save_path = 'fasttext_finetuned.bin'"
+    "model_save_path = '../models/fasttext_finetuned.bin'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "eb5f02bb-a9fe-49ec-bdac-5c399dd07392",
    "metadata": {},
    "outputs": [
@@ -174,30 +262,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Read 19M words\n",
-      "Number of words:  1089950\n",
+      "Read 15M words\n",
+      "Number of words:  951567\n",
       "Number of labels: 10\n",
-      "Progress: 100.0% words/sec/thread:  779572 lr: -0.000000 avg.loss:  0.001218 ETA:   0h 0m 0s 779571 lr:  0.000000 avg.loss:  0.001218 ETA:   0h 0m 0s\n"
+      "Progress: 100.0% words/sec/thread: 1212134 lr:  0.000000 avg.loss:  0.001210 ETA:   0h 0m 0s\n"
      ]
     }
    ],
    "source": [
-    "model = fasttext.train_supervised(input=training_data_path, epoch=100, lr=1.0)"
+    "model = fasttext.train_supervised(input=\"../fasttext_train.txt\", epoch=100, lr=1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "6fa5d359-826c-46a8-90eb-20d4c35ef33b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_model(\"fasttext_finetuned.bin\")"
+    "model.save_model(model_save_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "ff7c2769-6e95-4ea3-8ad8-618c1034926b",
    "metadata": {},
    "outputs": [
@@ -210,12 +298,53 @@
     }
    ],
    "source": [
-    "loaded_model = fasttext.load_model(\"fasttext_finetuned.bin\")"
+    "loaded_model = fasttext.load_model(model_save_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
+   "id": "35cf4f48-0c21-4f60-bdb5-8240583f2b37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data_path = '../fasttext_test.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a9ddf7b2-e3e7-436c-bed8-8c248efa565b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = loaded_model.test(test_data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "89045f4b-ecb9-43ae-b117-41bd0f1dc416",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(311999, 0.9944967772332604, 0.9944967772332604)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "0925cffb-dd69-4e9f-b352-ca9985bb5251",
    "metadata": {},
    "outputs": [
@@ -225,7 +354,7 @@
        "(('__label__Gujarati',), array([1.00001001]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
